# tungtungquizur

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
backend/: cards.cpp  main.cpp
backend/include/: cards.hpp
data/: cards.json
documentation/: BPM-24-2_Dzhekieva_Kuzmenko.docx
frontend/: cards.html  index.html  script.js
frontend/css/: styles.css
frontend/js/: cards.js  main.js
